src/lenguaje/parser.output
Terminales no usados en la gramática

    TK_DO
    TK_MAIN


Estado 72 conflictos: 1 desplazamiento/reducción
Estado 136 conflictos: 1 desplazamiento/reducción
Estado 137 conflictos: 1 desplazamiento/reducción
Estado 138 conflictos: 1 desplazamiento/reducción
Estado 139 conflictos: 1 desplazamiento/reducción
Estado 140 conflictos: 1 desplazamiento/reducción
Estado 141 conflictos: 1 desplazamiento/reducción
Estado 143 conflictos: 1 desplazamiento/reducción
Estado 145 conflictos: 1 desplazamiento/reducción
Estado 146 conflictos: 1 desplazamiento/reducción
Estado 147 conflictos: 1 desplazamiento/reducción
Estado 148 conflictos: 1 desplazamiento/reducción
Estado 149 conflictos: 1 desplazamiento/reducción
Estado 150 conflictos: 1 desplazamiento/reducción
Estado 168 conflictos: 14 desplazamiento/reducción
Estado 171 conflictos: 12 desplazamiento/reducción


Gramática

    0 $accept: inicio $end

    1 inicio: listainstrucciones

    2 listainstrucciones: listainstrucciones instruccion
    3                   | instruccion

    4 instruccion: IMPRIMIR
    5            | DECLARACION
    6            | ASIGNACION
    7            | IF
    8            | INCREMENTO_DECREMENTO TK_PTCOMA
    9            | SWITCH
   10            | BREAK
   11            | WHILE
   12            | FOR
   13            | CONTINUAR
   14            | RETORNAR
   15            | DECLARAR_FUNCION
   16            | LLAMADA_PROCEDIMIENTO
   17            | DECLARAR_VECTOR

   18 DECLARACION: TIPO ID TK_IGUAL expr TK_PTCOMA
   19            | TIPO ID TK_PTCOMA
   20            | TK_FINAL TIPO ID TK_IGUAL expr TK_PTCOMA

   21 DECLARAR_VECTOR: TIPO TK_CA TK_CC ID TK_IGUAL TK_NUEVO TIPO TK_CA expr TK_CC TK_PTCOMA
   22                | TIPO TK_CA TK_CC ID TK_IGUAL TK_LLA VALORES TK_LLC TK_PTCOMA

   23 ASIGNACION: expr OP_ASIGNACION expr TK_PTCOMA
   24           | ID TK_CA expr TK_CC OP_ASIGNACION expr TK_PTCOMA

   25 IMPRIMIR: TK_PRINT TK_PA expr TK_PC TK_PTCOMA

   26 INCREMENTO_DECREMENTO: expr TK_SUMA TK_SUMA
   27                      | expr TK_RESTA TK_RESTA

   28 IF: TK_IF TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC
   29   | TK_IF TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC TK_ELSE TK_LLA listainstrucciones TK_LLC
   30   | TK_IF TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC TK_ELSE IF

   31 BREAK: TK_BREAK TK_PTCOMA

   32 CONTINUAR: TK_CONTINUE TK_PTCOMA

   33 RETORNAR: TK_RETURN expr TK_PTCOMA

   34 SWITCH: TK_SWITCH TK_PA expr TK_PC TK_LLA CASES TK_LLC

   35 CASES: CASE CASES
   36      | CASE

   37 CASE: TK_CASE expr TK_DOSPUNTOS listainstrucciones
   38     | TK_DEFAULT TK_DOSPUNTOS listainstrucciones

   39 WHILE: TK_WHILE TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC

   40 FOR: TK_FOR TK_PA DECLARACION expr TK_PTCOMA INCREMENTO_DECREMENTO TK_PC TK_LLA listainstrucciones TK_LLC

   41 PARAMETROS: TIPO ID TK_COMA PARAMETROS
   42           | TIPO ID
   43           | ε

   44 DECLARAR_FUNCION: TIPO ID TK_PA PARAMETROS TK_PC TK_LLA listainstrucciones TK_LLC
   45                 | TK_VOID ID TK_PA PARAMETROS TK_PC TK_LLA listainstrucciones TK_LLC

   46 LLAMADA_PROCEDIMIENTO: ID TK_PA VALORES TK_PC TK_PTCOMA

   47 TIPO: TK_INT
   48     | TK_STRING
   49     | TK_FLOAT
   50     | TK_BOOL
   51     | TK_CHAR
   52     | TK_DOUBLE

   53 expr: TK_PA expr TK_PC
   54     | TK_PARSEINT TK_PA expr TK_PC
   55     | TK_PARSEFLOAT TK_PA expr TK_PC
   56     | TK_PARSEDOUBLE TK_PA expr TK_PC
   57     | TK_VALUEOF TK_PA expr TK_PC
   58     | TK_JOIN TK_PA expr TK_COMA VALORES TK_PC
   59     | TK_PA TIPO TK_PC expr
   60     | INT
   61     | DECIMAL
   62     | CARACTER
   63     | CADENA
   64     | BOOL
   65     | DOUBLE
   66     | ID
   67     | ARITMETICOS
   68     | RELACIONALES
   69     | LOGICOS
   70     | LLAMADA_FUNCION
   71     | ID TK_CA expr TK_CC
   72     | ID TK_LENGTH

   73 ARITMETICOS: expr TK_SUMA expr
   74            | expr TK_RESTA expr
   75            | expr TK_MULTIPLICACION expr
   76            | expr TK_DIVISION expr
   77            | expr TK_MODULAR expr

   78 OP_ASIGNACION: TK_IGUAL
   79              | TK_MAS_IGUAL
   80              | TK_MENOS_IGUAL
   81              | TK_POR_IGUAL
   82              | TK_DIVIDIR_IGUAL
   83              | TK_PORCENTAJE_IGUAL
   84              | TK_AND_IGUAL
   85              | TK_OR_IGUAL
   86              | TK_POTENCIA_IGUAL
   87              | TK_MAYOR_MAYOR_IGUAL
   88              | TK_MENOR_MENOR_IGUAL
   89              | TK_DOSPUNTOS_IGUAL

   90 RELACIONALES: expr TK_IGUAL_IGUAL expr
   91             | expr TK_EQUALS TK_PA expr TK_PC
   92             | expr TK_DIFERENTE expr
   93             | expr TK_MAYOR_IGUAL expr
   94             | expr TK_MENOR_IGUAL expr
   95             | expr TK_MAYOR expr
   96             | expr TK_MENOR expr

   97 LOGICOS: expr TK_AND expr
   98        | expr TK_OR expr
   99        | TK_NOT expr

  100 VALORES: expr TK_COMA VALORES
  101        | expr
  102        | ε

  103 LLAMADA_FUNCION: ID TK_PA VALORES TK_PC


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TK_PRINT (258) 25
    TK_IF (259) 28 29 30
    TK_ELSE (260) 29 30
    TK_WHILE (261) 39
    TK_FOR (262) 40
    TK_DO (263)
    TK_SWITCH (264) 34
    TK_CASE (265) 37
    TK_CONTINUE (266) 32
    TK_BREAK (267) 31
    TK_RETURN (268) 33
    TK_VOID (269) 45
    TK_MAIN (270)
    TK_DEFAULT (271) 38
    TK_NUEVO (272) 21
    TK_INT (273) 47
    TK_FLOAT (274) 49
    TK_STRING (275) 48
    TK_BOOL (276) 50
    TK_CHAR (277) 51
    TK_PARSEINT (278) 54
    TK_PARSEFLOAT (279) 55
    TK_PARSEDOUBLE (280) 56
    TK_VALUEOF (281) 57
    TK_JOIN (282) 58
    TK_DOUBLE (283) 52
    TK_EQUALS (284) 91
    TK_LENGTH (285) 72
    TK_FINAL (286) 20
    TK_PA (287) 25 28 29 30 34 39 40 44 45 46 53 54 55 56 57 58 59 91 103
    TK_PC (288) 25 28 29 30 34 39 40 44 45 46 53 54 55 56 57 58 59 91 103
    TK_LLA (289) 22 28 29 30 34 39 40 44 45
    TK_LLC (290) 22 28 29 30 34 39 40 44 45
    TK_PTCOMA (291) 8 18 19 20 21 22 23 24 25 31 32 33 40 46
    TK_DOSPUNTOS (292) 37 38
    TK_COMA (293) 41 58 100
    TK_CA (294) 21 22 24 71
    TK_CC (295) 21 22 24 71
    TK_MAYOR (296) 95
    TK_MENOR (297) 96
    TK_MAYOR_IGUAL (298) 93
    TK_MENOR_IGUAL (299) 94
    TK_AND (300) 97
    TK_OR (301) 98
    TK_NOT (302) 99
    TK_SUMA (303) 26 73
    TK_RESTA (304) 27 74
    TK_MULTIPLICACION (305) 75
    TK_DIVISION (306) 76
    TK_MODULAR (307) 77
    TK_IGUAL (308) 18 20 21 22 78
    TK_MAS_IGUAL (309) 79
    TK_MENOS_IGUAL (310) 80
    TK_POR_IGUAL (311) 81
    TK_DIVIDIR_IGUAL (312) 82
    TK_PORCENTAJE_IGUAL (313) 83
    TK_AND_IGUAL (314) 84
    TK_OR_IGUAL (315) 85
    TK_POTENCIA_IGUAL (316) 86
    TK_MAYOR_MAYOR_IGUAL (317) 87
    TK_MENOR_MENOR_IGUAL (318) 88
    TK_DOSPUNTOS_IGUAL (319) 89
    TK_IGUAL_IGUAL (320) 90
    TK_DIFERENTE (321) 92
    INT <str> (322) 60
    DECIMAL <str> (323) 61
    CARACTER <str> (324) 62
    CADENA <str> (325) 63
    ID <str> (326) 18 19 20 21 22 24 41 42 44 45 46 66 71 72 103
    BOOL <str> (327) 64
    DOUBLE <str> (328) 65


No terminales con las reglas donde aparecen

    $accept (74)
        on left: 0
    inicio <node> (75)
        on left: 1
        on right: 0
    listainstrucciones <node> (76)
        on left: 2 3
        on right: 1 2 28 29 30 37 38 39 40 44 45
    instruccion <node> (77)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17
        on right: 2 3
    DECLARACION <node> (78)
        on left: 18 19 20
        on right: 5 40
    DECLARAR_VECTOR <node> (79)
        on left: 21 22
        on right: 17
    ASIGNACION <node> (80)
        on left: 23 24
        on right: 6
    IMPRIMIR <node> (81)
        on left: 25
        on right: 4
    INCREMENTO_DECREMENTO <node> (82)
        on left: 26 27
        on right: 8 40
    IF <node> (83)
        on left: 28 29 30
        on right: 7 30
    BREAK <node> (84)
        on left: 31
        on right: 10
    CONTINUAR <node> (85)
        on left: 32
        on right: 13
    RETORNAR <node> (86)
        on left: 33
        on right: 14
    SWITCH <node> (87)
        on left: 34
        on right: 9
    CASES <node> (88)
        on left: 35 36
        on right: 34 35
    CASE <node> (89)
        on left: 37 38
        on right: 35 36
    WHILE <node> (90)
        on left: 39
        on right: 11
    FOR <node> (91)
        on left: 40
        on right: 12
    PARAMETROS <node> (92)
        on left: 41 42 43
        on right: 41 44 45
    DECLARAR_FUNCION <node> (93)
        on left: 44 45
        on right: 15
    LLAMADA_PROCEDIMIENTO <node> (94)
        on left: 46
        on right: 16
    TIPO <node> (95)
        on left: 47 48 49 50 51 52
        on right: 18 19 20 21 22 41 42 44 59
    expr <node> (96)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
        on right: 18 20 21 23 24 25 26 27 28 29 30 33 34 37 39 40 53 54 55 56 57 58 59 71 73 74 75 76 77 90 91 92 93 94 95 96 97 98 99 100 101
    ARITMETICOS <node> (97)
        on left: 73 74 75 76 77
        on right: 67
    OP_ASIGNACION <str> (98)
        on left: 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 23 24
    RELACIONALES <node> (99)
        on left: 90 91 92 93 94 95 96
        on right: 68
    LOGICOS <node> (100)
        on left: 97 98 99
        on right: 69
    VALORES <node> (101)
        on left: 100 101 102
        on right: 22 46 58 100 103
    LLAMADA_FUNCION <node> (102)
        on left: 103
        on right: 70


Estado 0

    0 $accept: • inicio $end

    TK_PRINT        desplazar e ir al estado 1
    TK_IF           desplazar e ir al estado 2
    TK_WHILE        desplazar e ir al estado 3
    TK_FOR          desplazar e ir al estado 4
    TK_SWITCH       desplazar e ir al estado 5
    TK_CONTINUE     desplazar e ir al estado 6
    TK_BREAK        desplazar e ir al estado 7
    TK_RETURN       desplazar e ir al estado 8
    TK_VOID         desplazar e ir al estado 9
    TK_INT          desplazar e ir al estado 10
    TK_FLOAT        desplazar e ir al estado 11
    TK_STRING       desplazar e ir al estado 12
    TK_BOOL         desplazar e ir al estado 13
    TK_CHAR         desplazar e ir al estado 14
    TK_PARSEINT     desplazar e ir al estado 15
    TK_PARSEFLOAT   desplazar e ir al estado 16
    TK_PARSEDOUBLE  desplazar e ir al estado 17
    TK_VALUEOF      desplazar e ir al estado 18
    TK_JOIN         desplazar e ir al estado 19
    TK_DOUBLE       desplazar e ir al estado 20
    TK_FINAL        desplazar e ir al estado 21
    TK_PA           desplazar e ir al estado 22
    TK_NOT          desplazar e ir al estado 23
    INT             desplazar e ir al estado 24
    DECIMAL         desplazar e ir al estado 25
    CARACTER        desplazar e ir al estado 26
    CADENA          desplazar e ir al estado 27
    ID              desplazar e ir al estado 28
    BOOL            desplazar e ir al estado 29
    DOUBLE          desplazar e ir al estado 30

    inicio                 ir al estado 31
    listainstrucciones     ir al estado 32
    instruccion            ir al estado 33
    DECLARACION            ir al estado 34
    DECLARAR_VECTOR        ir al estado 35
    ASIGNACION             ir al estado 36
    IMPRIMIR               ir al estado 37
    INCREMENTO_DECREMENTO  ir al estado 38
    IF                     ir al estado 39
    BREAK                  ir al estado 40
    CONTINUAR              ir al estado 41
    RETORNAR               ir al estado 42
    SWITCH                 ir al estado 43
    WHILE                  ir al estado 44
    FOR                    ir al estado 45
    DECLARAR_FUNCION       ir al estado 46
    LLAMADA_PROCEDIMIENTO  ir al estado 47
    TIPO                   ir al estado 48
    expr                   ir al estado 49
    ARITMETICOS            ir al estado 50
    RELACIONALES           ir al estado 51
    LOGICOS                ir al estado 52
    LLAMADA_FUNCION        ir al estado 53


Estado 1

   25 IMPRIMIR: TK_PRINT • TK_PA expr TK_PC TK_PTCOMA

    TK_PA  desplazar e ir al estado 54


Estado 2

   28 IF: TK_IF • TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC
   29   | TK_IF • TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC TK_ELSE TK_LLA listainstrucciones TK_LLC
   30   | TK_IF • TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC TK_ELSE IF

    TK_PA  desplazar e ir al estado 55


Estado 3

   39 WHILE: TK_WHILE • TK_PA expr TK_PC TK_LLA listainstrucciones TK_LLC

    TK_PA  desplazar e ir al estado 56


Estado 4

   40 FOR: TK_FOR • TK_PA DECLARACION expr TK_PTCOMA INCREMENTO_DECREMENTO TK_PC TK_LLA listainstrucciones TK_LLC

    TK_PA  desplazar e ir al estado 57


Estado 5

   34 SWITCH: TK_SWITCH • TK_PA expr TK_PC TK_LLA CASES TK_LLC

    TK_PA  desplazar e ir al estado 58


Estado 6

   32 CONTINUAR: TK_CONTINUE • TK_PTCOMA

    TK_PTCOMA  desplazar e ir al estado 59


Estado 7

   31 BREAK: TK_BREAK • TK_PTCOMA

    TK_PTCOMA  desplazar e ir al estado 60


Estado 8

   33 RETORNAR: TK_RETURN • expr TK_PTCOMA

    TK_PARSEINT     desplazar e ir al estado 15
    TK_PARSEFLOAT   desplazar e ir al estado 16
    TK_PARSEDOUBLE  desplazar e ir al estado 17
    TK_VALUEOF      desplazar e ir al estado 18
    TK_JOIN         desplazar e ir al estado 19
    TK_PA           desplazar e ir al estado 22
    TK_NOT          desplazar e ir al estado 23
    INT             desplazar e ir al estado 24
    DECIMAL         desplazar e ir al estado 25
    CARACTER        desplazar e ir al estado 26
    CADENA          desplazar e ir al estado 27
    ID              desplazar e ir al estado 61
    BOOL            desplazar e ir al estado 29
    DOUBLE          desplazar e ir al estado 30

    expr             ir al estado 62
    ARITMETICOS      ir al estado 50
    RELACIONALES     ir al estado 51
    LOGICOS          ir al estado 52
    LLAMADA_FUNCION  ir al estado 53


Estado 9

   45 DECLARAR_FUNCION: TK_VOID • ID TK_PA PARAMETROS TK_PC TK_LLA listainstrucciones TK_LLC

    ID  desplazar e ir al estado 63


Estado 10

   47 TIPO: TK_INT •

    $default  reduce usando la regla 47 (TIPO)


Estado 11

   49 TIPO: TK_FLOAT •

    $default  reduce usando la regla 49 (TIPO)


Estado 12

   48 TIPO: TK_STRING •

    $default  reduce usando la regla 48 (TIPO)


Estado 13

   50 TIPO: TK_BOOL •

    $default  reduce usando la regla 50 (TIPO)


Estado 14

   51 TIPO: TK_CHAR •

    $default  reduce usando la regla 51 (TIPO)


Estado 15

   54 expr: TK_PARSEINT • TK_PA expr TK_PC

    TK_PA  desplazar e ir al estado 64


Estado 16

   55 expr: TK_PARSEFLOAT • TK_PA expr TK_PC

    TK_PA  desplazar e ir al estado 65


Estado 17

   56 expr: TK_PARSEDOUBLE • TK_PA expr TK_PC

    TK_PA  desplazar e ir al estado 66


Estado 18

   57 expr: TK_VALUEOF • TK_PA expr TK_PC

    TK_PA  desplazar e ir al estado 67


Estado 19

   58 expr: TK_JOIN • TK_PA expr TK_COMA VALORES TK_PC

    TK_PA  desplazar e ir al estado 68


Estado 20

   52 TIPO: TK_DOUBLE •

    $default  reduce usando la regla 52 (TIPO)


Estado 21

   20 DECLARACION: TK_FINAL • TIPO ID TK_IGUAL expr TK_PTCOMA

    TK_INT     desplazar e ir al estado 10
    TK_FLOAT   desplazar e ir al estado 11
    TK_STRING  desplazar e ir al estado 12
    TK_BOOL    desplazar e ir al estado 13
    TK_CHAR    desplazar e ir al estado 14
    TK_DOUBLE  desplazar e ir al estado 20

    TIPO  ir al estado 69


Estado 22

   53 expr: TK_PA • expr TK_PC
   59     | TK_PA • TIPO TK_PC expr

    TK_INT          desplazar e ir al estado 10
    TK_FLOAT        desplazar e ir al estado 11
    TK_STRING       desplazar e ir al estado 12
    TK_BOOL         desplazar e ir al estado 13
    TK_CHAR         desplazar e ir al estado 14
    TK_PARSEINT     desplazar e ir al estado 15
    TK_PARSEFLOAT   desplazar e ir al estado 16
    TK_PARSEDOUBLE  desplazar e ir al estado 17
    TK_VALUEOF      desplazar e ir al estado 18
    TK_JOIN         desplazar e ir al estado 19
    TK_DOUBLE       desplazar e ir al estado 20
    TK_PA           desplazar e ir al estado 22
    TK_NOT          desplazar e ir al estado 23
    INT             desplazar e ir al estado 24
    DECIMAL         desplazar e ir al estado 25
    CARACTER        desplazar e ir al estado 26
    CADENA          desplazar e ir al estado 27
    ID              desplazar e ir al estado 61
    BOOL            desplazar e ir al estado 29
    DOUBLE          desplazar e ir al estado 30

    TIPO             ir al estado 70
    expr             ir al estado 71
    ARITMETICOS      ir al estado 50
    RELACIONALES     ir al estado 51
    LOGICOS          ir al estado 52
    LLAMADA_FUNCION  ir al estado 53


Estado 23

   99 LOGICOS: TK_NOT • expr

    TK_PARSEINT     desplazar e ir al estado 15
    TK_PARSEFLOAT   desplazar e ir al estado 16
    TK_PARSEDOUBLE  desplazar e ir al estado 17
    TK_VALUEOF      desplazar e ir al estado 18
    TK_JOIN         desplazar e ir al estado 19
    TK_PA           desplazar e ir al estado 22
    TK_NOT          desplazar e ir al estado 23
    INT             desplazar e ir al estado 24
    DECIMAL         desplazar e ir al estado 25
    CARACTER        desplazar e ir al estado 26
    CADENA          desplazar e ir al estado 27
    ID              desplazar e ir al estado 61
    BOOL            desplazar e ir al estado 29
    DOUBLE          desplazar e ir al estado 30

    expr             ir al estado 72
    ARITMETICOS      ir al estado 50
    RELACIONALES     ir al estado 51
    LOGICOS          ir al estado 52
    LLAMADA_FUNCION  ir al estado 53


Estado 24

   60 expr: INT •

    $default  reduce usando la regla 60 (expr)


Estado 25

   61 expr: DECIMAL •

    $default  reduce usando la regla 61 (expr)


Estado 26

   62 expr: CARACTER •

    $default  reduce usando la regla 62 (expr)


Estado 27

   63 expr: CADENA •

    $default  reduce usando la regla 63 (expr)


Estado 28

   24 ASIGNACION: ID • TK_CA expr TK_CC OP_ASIGNACION expr TK_PTCOMA
   46 LLAMADA_PROCEDIMIENTO: ID • TK_PA VALORES TK_PC TK_PTCOMA
   66 expr: ID •
   71     | ID • TK_CA expr TK_CC
   72     | ID • TK_LENGTH
  103 LLAMADA_FUNCION: ID • TK_PA VALORES TK_PC

    TK_LENGTH  desplazar e ir al estado 73
    TK_PA      desplazar e ir al estado 74
    TK_CA      desplazar e ir al estado 75

    $default  reduce usando la regla 66 (expr)


Estado 29

   64 expr: BOOL •

    $default  reduce usando la regla 64 (expr)


Estado 30

   65 expr: DOUBLE •

    $default  reduce usando la regla 65 (expr)


Estado 31

    0 $accept: inicio • $end

    $end  desplazar e ir al estado 76


Estado 32

    1 inicio: listainstrucciones •
    2 listainstrucciones: listainstrucciones • instruccion
